tutorials/lab3/sw/workspace/.metadata/.plugins/org.eclipse.cdt.ui/lab3.build.log
18:36:09 **** Incremental Build of configuration Debug for project lab3 ****
make all 
make --no-print-directory pre-build
a9-linaro-pre-build-step
 
make --no-print-directory main-build
Building file: ../src/IRR.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -DSW_PROFILE -Wall -O0 -g3 -pg -c -fmessage-length=0 -MT"src/IRR.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I/home/ispr/Documentos/ispr/tutorials/lab3/sw/workspace/system_platform/export/system_platform/sw/system_platform/standalone_ps7_cortexa9_0/bspinclude/include -MMD -MP -MF"src/IRR.d" -MT"src/IRR.o" -o "src/IRR.o" "../src/IRR.c"
../src/IRR.c:5:38: error: 'LEN' undeclared here (not in a function)
    5 | iir_direct_form_I_float(float output[LEN],
      |                                      ^~~
../src/IRR.c:7:10: error: 'M' undeclared here (not in a function)
    7 |  float b[M],
      |          ^
../src/IRR.c: In function 'iir_direct_form_I_float':
../src/IRR.c:15:5: error: 'current' undeclared (first use in this function)
   15 | for(current=0; current<LEN; current++) {
      |     ^~~~~~~
../src/IRR.c:15:5: note: each undeclared identifier is reported only once for each function it appears in
../src/IRR.c:15:24: error: 'LEN' undeclared (first use in this function)
   15 | for(current=0; current<LEN; current++) {
      |                        ^~~
../src/IRR.c:17:10: error: 'i' undeclared (first use in this function)
   17 |     for (i=0; i<M; i++){
      |          ^
../src/IRR.c:17:17: error: 'M' undeclared (first use in this function)
   17 |     for (i=0; i<M; i++){
      |                 ^
../src/IRR.c: At top level:
../src/IRR.c:30:1: error: expected identifier or '(' before 'for'
   30 | for (filter=0; filter<=28; filters++){
      | ^~~
../src/IRR.c:30:22: error: expected '=', ',', ';', 'asm' or '__attribute__' before '<=' token
   30 | for (filter=0; filter<=28; filters++){
      |                      ^~
../src/IRR.c:30:35: error: expected '=', ',', ';', 'asm' or '__attribute__' before '++' token
   30 | for (filter=0; filter<=28; filters++){
      |                                   ^~
make[1]: *** [src/subdir.mk:32: src/IRR.o] Error 1
make: *** [makefile:34: all] Error 2

18:36:10 Build Finished (took 664ms)

